--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Education app from TheCryptoHomies",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d dist"
   },
   "author": "Mikal Muhammad",
   "license": "ISC",
+  "homepage": "https://ibn5x.github/TopCoin100",
   "devDependencies": {
     "gh-pages": "^3.2.3"
   }
